--- a/KH_Front/css/day04/1_애니메이션 속성.html
+++ b/KH_Front/css/day04/1_애니메이션 속성.html
@@ -16,7 +16,7 @@
 
         6. 애니메이션 정의 방법 (@keyframes, from, to)
 
-
+        - js에서의 애니메이션 활용 방법: js/day05/10_애니메이션 예제 파일 참고!
         */
         .box{background: yellow; font-size: 20px; font-weight: bold; 
             width: 100px; height: 100px; border: 1px solid black; 
