--- a/KH_Front/js/JQuery/day06/6_JQuery 요소 추가삭제 예제.html
+++ b/KH_Front/js/JQuery/day06/6_JQuery 요소 추가삭제 예제.html
@@ -18,6 +18,8 @@
 	<script>
 		/*
 		요소 추가하기
+		 -js day04 4번 예제 확인해서 JQuery를 사용하지 않는 방식 알아보기!
+		 
 			- $("선택자").append(html코드 or 요소): 요소 마지막 자식 요소 다음에 html 코드 or 요소를 추가함
 			- $("선택자").prepend(html코드 or 요소): 요소 첫 번째 자식 요소 앞에 html 코드 or 요소를 추가함
 			- $("선택자").before(html코드 or 요소): 요소의 앞에 html 코드 or 요소를 추가함
