--- a/KH_Front/js/day02/16_이벤트 등록.html
+++ b/KH_Front/js/day02/16_이벤트 등록.html
@@ -6,8 +6,10 @@
 	<title>이벤트 등록</title>
 </head>
 <body>
-	<!-- 이벤트 등록방법
-	1. 태그에 직접 정의하기 -->
+	<!-- 이벤트 등록방법 -->
+
+		<!-- 
+		// 1. 태그에 직접 정의하기 -->
 	<div id="id1" onclick="alert('이벤트 등록1')">박스1</div>
 	<div id="id2">박스2</div>
 	<div id="id3">박스3</div>
@@ -19,7 +21,8 @@
 			alert(this.innerText)
 		}
 		
-		// 3. 화살표 함수로 지정하기(this 사용 불가능)
+		// 3. 화살표 함수로 지정하기 
+		// !!this 사용 불가능!!
 		let box3 = document.getElementById("id3")
 		box3.onclick = ()=>{
 			// 화살표 함수에는 this를 쓸 수 없음
