--- a/KH_Front/js/day02/17_css 속성에 접근하기.html
+++ b/KH_Front/js/day02/17_css 속성에 접근하기.html
@@ -10,8 +10,10 @@
 	<script>
 		/*
 		css 속성에 접근하기: 요소.style.속성명
-		- css 속성 명에 -가 들어간 속성은 -를 제거하고 카멜 표기법으로 표시
-		ex) background-color > backgroundColor
+			- css 속성명에 '-'가 들어간 속성은 '-'를 제거하고 카멜 표기법으로 표시
+			ex) background-color > backgroundColor
+
+		JQuery day06 7번 예제에서 JQuery에서는 어떤 방식으로 하는 지 알 수 있음.
 		*/
 
 		let box = document.getElementsByClassName("box")[0]
