--- a/KH_Front/js/day02/20_예제6.html
+++ b/KH_Front/js/day02/20_예제6.html
@@ -18,7 +18,7 @@
 		function visible(){
 			let box = document.getElementById('box')
 			let display = box.style.display
-			display = display == 'none'?'block':'none'
+			display = display == 'none'?'block':'none' // 람다식 이용하기!
 			box.style.display = display
 		}
 	</script>
