--- a/KH_Front/js/day03/5_1클릭 이벤트 예제5.html
+++ b/KH_Front/js/day03/5_1클릭 이벤트 예제5.html
@@ -6,14 +6,14 @@
 	<title>클릭 이벤트 예제 5-1</title>
 	<style>
 		.box{width: 30%; height: 300px; border: 1px solid black; background-color: aquamarine;
-		margin: 10px; float: left; }
+		margin: 10px; float: left; visibility: hidden; }
 	</style>
 </head>
 <body>
 	<div style="text-align: center;">
-		<button id="btn1" >1</button>
-		<button id="btn2" >2</button>
-		<button id="btn3" >3</button>
+		<button id="btn1" class="btn" >1</button>
+		<button id="btn2" class="btn">2</button>
+		<button id="btn3" class="btn">3</button>
 	</div>
 	
 	<div id="box1" class="box">1</div>
@@ -27,19 +27,22 @@
 	*/
 	 
 	let btns = document.querySelectorAll('.btn') // elementsBy는 forEach를 사용할 수 없음.
-	let boxes = document.querySelectorAll('box')
-	btns.forEach((item, index) =>{
+	let boxes = document.querySelectorAll('.box')
+	btns.forEach(function(item, idx){
 		item.onclick = function(){
 			invisible()
 			// 눌린 버튼의 순서와 같은 순서의 박스를 보여줌
-			boxes[index].style.visibility='visible'
+			// console.log("idx ="+idx)
+			console.log(boxes[idx])
+			boxes[idx].style.visibility='visible'
 		}
 	});
 
 	function invisible(){ // 모든 박스를 안보이게하는 메서드를 먼저 작성해놓고 다른 메서드에서 호출하는 구조
 		let boxes2 = document.getElementsByClassName('box') // className은 .을 찍지 않음!
 		for(box of boxes2){
-			box.visibility = "hidden"
+			console.log(3)
+			box.style.visibility = "hidden"
 		}
 	}
 	</script>
