--- a/KH_Front/js/day04/10_애니메이션 예제.html
+++ b/KH_Front/js/day04/10_애니메이션 예제.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>애니메이션 예제</title>
     <style>
+        /* 
+        애니메이션 정의(및 속성에 대한 설명)는 css/day04/1_애니메이션 속성 파일을 확인하기!
+        */
         .container{margin-bottom: 10px; border: 1px solid black; padding: 10px;
         }
         .box{width: 100px; height: 50px; background-color: yellow;}
