--- a/KH_Front/js/day04/15_(질문)롤링 예제 3.html
+++ b/KH_Front/js/day04/15_(질문)롤링 예제 3.html
@@ -53,7 +53,8 @@
         const contentBox = document.getElementsByClassName("content-box")[0]
         let firstBox
         //롤링시작
-		let id = animationRun();	
+        // 변수에 함수를 저장하기만 한거 아닌가...? 어째서 자동 실행이 되는건지... 이미 함수가 정의되어있어서 저장하는 것만으로도 실행이 되나?
+		let id = animationRun(); 
 
         //마우스를 호버했을 때
         contentBox.onmouseenter = function(){
