--- a/KH_Front/js/JQuery/day06/7_JQuery style 변경 예제.html
+++ b/KH_Front/js/JQuery/day06/7_JQuery style 변경 예제.html
@@ -38,6 +38,8 @@
 			속성명, 값
 			...
 		})
+
+		js day02 17번 예제에서 JQuery 없이 적용시키는 방법을 알 수 있음.
 		*/
 
 		// 클래스 추가삭제 =====================================================
