--- a/KH_Front/js/day01/19_예제6.html
+++ b/KH_Front/js/day01/19_예제6.html
@@ -11,6 +11,8 @@
         /*
         정수를 입력 받아, 입력받은 정수 만큼 오늘의 할 일을 입력해서, ol태그로 화면에 출력하시오
         (배열 사용)
+
+        day02 14번 예제 참고(동일 예제)
         */
         var num = prompt('할 일 개수를 입력하세요: ')
         var list = new Array();
