--- a/KH_Front/js/day02/12_예제2.html
+++ b/KH_Front/js/day02/12_예제2.html
@@ -17,9 +17,8 @@
 		function plus(amount){
 			let numberInput = document.getElementById('number')
 			let addNum = numberInput.value;
-			addNum = +addNum;
-			addNum +=amount;
-			numberInput.value = addNum;
+			addNum = +addNum; // input 박스에 있는 값을 정수로 바꾸기
+			numberInput.value = addNum +=amount;;
 		}
 	</script>
 </body>
