--- a/KH_Front/js/day02/13_inner 메서드 예제.html
+++ b/KH_Front/js/day02/13_inner 메서드 예제.html
@@ -19,14 +19,14 @@
 	</div>
 	<script>
 		let ul = document.getElementById('ul')
-		console.log(ul.innerText) // style의 영향을 받아 메뉴2를 가져오지 못함
+		console.log(ul.innerText) // style의 영향을 받아 메뉴2를 가져오지 못함. 태그 안의 style 속성을 지우면 아래 코드와 똑같이 작동함.
 		console.log(ul.textContent) // 스타일의 영향을 받지 않음
 		console.log(ul.innerHTML) // html 코드를 가져옴
 
 		let box = document.getElementsByClassName('box')[0]
 		box.innerText= "수정된 박스"
 		let container = document.getElementsByClassName('container')[0]
-		container.innerHTML +=`<a href="http://naver.com">네이버로</a>` // html 코드를 가져옴
+		container.innerHTML +=`<a href="http://naver.com">네이버로</a>` // 기존 있던 코드에 새로운 코드를 추가함. !!중요!!
 		
 	</script>
 </body>
