--- a/KH_Front/js/day03/8_이벤트 객체.html
+++ b/KH_Front/js/day03/8_이벤트 객체.html
@@ -23,6 +23,7 @@
 		let btn = document.getElementById('btn')
 		btn.onclick = function(event){
 			console.log(event)
+			console.log(event.target)
 		}
 	</script>
 </body>
