복습 및 부족한 부분 채우기

--- a/KH_Front/js/JQuery/day07/1_(강의 듣기)게시글 관리 예제.html
+++ b/KH_Front/js/JQuery/day07/1_(강의 듣기)게시글 관리 예제.html
@@ -173,7 +173,7 @@
 				</div>
 				<div class="input-box">
 					<label class="label">작성자:</label>
-					<input type="text" name="writer"class="input" readonly value="${board["wirete"]}">
+					<input type="text" name="writer"class="input" readonly value="${board["writer"]}">
 				</div>
 				<div class="input-box">
 					<label class="label">조회수:</label>
