--- a/KH_Front/js/day05/8_Promise 예제.html
+++ b/KH_Front/js/day05/8_Promise 예제.html
@@ -30,6 +30,23 @@
 			});
 		});
 		*/
+
+		/*
+		https://learnjs.vlpt.us/async/01-promise.html
+
+		Promise는 '프로미스가 생성된 시점에는 알려지지 않았을 수도 있는 값을 위한 대리자'로, 
+		비동기 연산이 종료된 이후에 결과 값과 실패 사유를 처리하기 위한 처리기를 연결할 수 있습니다. 
+		(비동기(asynchronous)란, 어떤 작업을 실행할 때 그 작업이 완료되지 않더라도 다음 코드를 실행하는 방식을 의미한다. 
+		즉, 작업이 완료되지 않았더라도 결과를 기다리지 않고 다음 코드를 실행하는 것이다.)
+		
+
+		프로미스를 사용하면 비동기 메서드에서 마치 동기 메서드처럼 값을 반환할 수 있습니다. 
+		다만 최종 결과를 반환하는 것이 아니고, 
+		미래의 어떤 시점에 결과를 제공하겠다는 '약속'(프로미스)을 반환합니다.
+		
+		*/
+
+
 		function increase2(n){
 			return new Promise(function(resolve, reject){
 				setTimeout(function(){
@@ -39,6 +56,12 @@
 				}, 1000);
 			});
 		}
+
+		/*
+		여기까지만 보면, 결국 함수를 전달하는건데, 뭐가 다르지 싶을수도 있습니다. 
+		하지만, Promise 의 속성 중에는, 만약 then 내부에 넣은 함수에서 또 Promise 를 리턴하게 된다면, 연달아서 사용 할 수 있습니다.
+		*/
+
 		let promise 
 			= increase2(0)
 				.then(function(n){ 
