--- a/React/day01/04_JSX state, destructuring.html
+++ b/React/day01/04_JSX state, destructuring.html
@@ -11,31 +11,39 @@
 <body>
 	<div id="root"></div>
 	<script type="text/babel">
-	
-	let count = 0
 	const root = ReactDOM.createRoot(document.getElementById('root'))
-	// JSX의 특징: 
-	// = script 타입이 다름.
-    // = 요소를 함수로 만듦
-	/*
-		function 함수명(){
-			return (<태그명 이벤트명={함수}>텍스트</태그명>);
-		};
-	*/
 	
+	let arr = [1, 10]
+	// 배열의 0번지 값을 appleCount에 저장하고, 배열의 1번지 값을 bananaCount에 저장하는 코드
+	/*
+	let appleCount = arr[0]
+	let bananaCount = arr[1]
+	*/
+
+	// destructuring 문법을 이용해 arr의 값 Mapping하기
+	let [appleCount, bananaCount] = arr;
+
+	console.log(appleCount)
+	console.log(bananaCount)
+
+
+
 	function App(){
+		/* React.useState
+		//
+		// 0번지에는 변수값을, 
+		// 1번지에는 0번지에 있는 변수값을 변경할 수 있는 Setter가 저장됨.
+		// () 안의 값은 기본값
+		*/
+		let [count, setCount] = React.useState(0)
+
 		function countUp(){
-			alert(++count)
+			setCount(count+1)
 		}
 		function countDown(){
-			alert(--count)
+			setCount(count-1)
 		}
-
-		/*
-		변수 값은 {변수명}을 통해 가져와서 화면에 출력할 수 있다.
-		변수 값이 바뀌어도 {변수명}의 내용물은 바뀌지 않는다.
-		*/
-
+	
 		return (
 			<div>
 				<button onClick={countDown}>-</button>
@@ -45,10 +53,7 @@
 		)
 	}
 
-
-	root.render(
-		<App />
-	);
+	root.render(<App />);
 </script>
 </body>
 </html>
