--- a/React/day01/01_React 시작하기.html
+++ b/React/day01/01_React 시작하기.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- 리액트 사용하기 -->
-	<!-- 1. CDN 링크 연결하기 -->
+	<!-- 1. React CDN 링크 연결하기 -->
 	<script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
 	<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 	<title>리액트</title>
