--- a/React/day01/02_JSX 시작하기.html
+++ b/React/day01/02_JSX 시작하기.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- JSX 이용하기 -->
-	<!-- 1. CDN 코드 추가-->
+	<!-- JSX 이용하기(임포트 순서 중요함) -->
+	<!-- 1. React CDN 코드 추가-->
 	<script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
 	<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 	<!-- 2. babel 추가-->
