2일차 오후진도

--- a/React/day03/5_게시글 등록 예제.html
+++ b/React/day03/5_게시글 등록 예제.html
@@ -29,6 +29,7 @@
 			let [regDate, setRegDate] = React.useState("");
 			let [content, setContent] = React.useState("");
 			let [list, setList] = React.useState([]);
+
 			function insertBoard(){
 				let board = {
 					title,
@@ -38,6 +39,12 @@
 				}
 				//setList(prevBoard=>[board, ...prevBoard]);
 				setList([board, ...list]);
+			}
+
+			function deleteBoard(index){
+				let tmpList = [...list];	// 기존 리스트의 복사본을 만듦
+				tmpList.splice(index, 1)	// index 번지부터 1개의 객체를 삭제함
+				setList(tmpList) 
 			}
 
 			return (
@@ -71,19 +78,30 @@
 					<div>
 						<table board="1">
 							<thead>
-								<th>제목</th>
-								<th>작성자</th>
-								<th>작성일</th>
+								<tr>
+									<th>제목</th>
+									<th>작성자</th>
+									<th>작성일</th>
+									<th>비고</th>
+								</tr>
 							</thead>
 							<tbody>
-								<tr>
-									<td></td>
-									<td></td>
-									<td></td>
-								</tr>
+								{list.map((item, index)=>{
+									return(
+										<tr key={index}>
+											<td>{item.title}</td>
+											<td>{item.writer}</td>
+											<td>{item.regDate}</td>
+											<td>
+												<button onClick={()=>deleteBoard(index)}>삭제</button>
+											</td>
+										</tr>
+									)
+
+								})}
+								
 							</tbody>
 						</table>
-						{list.length != 0 ? list[0].title: ""}
 					</div>
 				</div>
 			);
